Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16470

Cannot start multiple different targets from subdirs project

XMLWordPrintable

    • 6ccdf74965d7b8ced56ac41a05ade8d0208a42e7 (qt-creator/qt-creator/master)

      In a subdirs project with different targets (e.g. server and client):

      • Press Ctrl+T and select the first target for run
      • Press Ctrl+R, the target runs
      • Press Ctrl+T and select the second target for run
      • Press Ctrl+R, the first running target is killed and the second target runs

      I remember there was a change to kill the running target to allow linking in Windows (where linking is impossible if the target file is open).

      However, killing an other application (at least in the case where the project doesn't need to be build) seems to much.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes